# azure-apic-a2a-registry-web-api-py

./: .env.example  .gitignore  README.md  poe_tasks.toml  pyproject.toml
azure/WebApp/: .env.WebApp.example  startup.sh
config/: logging.conf
publish/: README.md
publish/config/: logging.conf
rest/a2a/: GET.http
scripts/: dist.ba.sh
src/a2a_registry/: __main__.py
src/a2a_registry/config/: configuration.py  logs.py  mixin.py
src/a2a_registry/config/os_environ/: api_center.py  settings.py
src/a2a_registry/dependency_injection/: container.py
src/a2a_registry/models/kubernetes/: status.py
src/a2a_registry/services/a2a/: protocol.py  service.py
src/a2a_registry/typing/: json.py
src/a2a_registry/web/: app.py  health.py
src/a2a_registry/web/api/: a2a.py
